=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.24_01-dev

disable r->proxyreq checking unless PerlTransHandler is enabled and
configured

fix 'make tar_Apache' [Jesse Erlbaum <jesse@VM.COM>]

fix for Perl{Module,Require} in .htaccess,
thanks to Will Trillich and Andrew Gideon for the spot

static+apaci fixes for aix [Jens-Uwe Mager <jum@helios.de>]

fix bug in Perl{Set,Add}Var so $r->dir_config->get('key') sees the
same values as $r->dir_config('key'), thanks to Geoffrey Young for the spot

PerlAddVar is now an ITERATE2 directive rather than TAKE2

added Apache::Server::error_fname method

eg/makepl_args.mod_perl updated
[Neil Conway <nconway@klamath.dyndns.org>]

'make test' config fixes for mod_ssl
[David Mitchell <davem@fdgroup.co.uk>, Mark Murphy <mark@opus.pass.wayne.edu>,
Stephen Schaefer <stephen@networks.com>]

plug leak in DIR_MERGE, thanks to Matt Sergeant for the spot

fixes to run and pass 'make test' on ActivePerl [Randy Kobes, Gerald Richter]

Makefile.PL:post_initialize fix for win32, thanks to john sterling for 
the spot

fixes for ActivePerl [Gurusamy Sarathy <gsar@ActiveState.com>]

change apaci/Makefile.tmpl and src/modules/perl/Makefile so Perl's
include path comes before /usr/local/include, e.g. to make sure Perl's 
patchlevel.h is used, thanks to Ryan Morgan for the spot

avoid duplicate buffer copy in {read,get}_client_block by reading
directly into Perl's SV buffer

modules/request test fix
[Ken Williams <ken@forum.swarthmore.edu>]

switch usage of hard_timeout() to soft_timeout(), so if SIGALRM
happens during Apache::{print,read}, the script will continue run,
allowing proper cleanup (e.g. DESTROY)

fix refcnt bug in $r->get_handlers,
thanks Geoffrey Young for the spot

add PerlCleanupHandler to the {get,set}_handlers table,
thanks Geoffrey Young for the spot

fix $r->args(undef), thanks to Greg Cope for the spot
