@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.24_01-dev
 
+added Apache::user method in preparation for 2.0, now that `user' hangs
+off of the request_rec rather than request_rec->connection in Apache 2.0
+
 disable r->proxyreq checking unless PerlTransHandler is enabled and
 configured
 
